# fastasyncpg

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
fastasyncpg/: _modidx.py  core.py
nbs/: 00_core.ipynb  db_dc.py  index.ipynb  nbdev.yml
