[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastasyncpg"
dynamic = ["version"]
description = "A simple wrapper for asyncpg"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev']
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only" ]
dependencies = [ "asyncpg", "fastcore" ]

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastasyncpg"
Documentation = "https://AnswerDotAI.github.io/fastasyncpg/"

[project.entry-points.nbdev]
fastasyncpg = "fastasyncpg._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastasyncpg.__version__"}

[tool.setuptools.packages.find]
include = ["fastasyncpg"]

[tool.nbdev]
custom_sidebar = false
